# haystack-cpp

./: CMakeLists.txt  Doxyfile  README.md  license.txt
http_client/: CMakeLists.txt
http_client/include/: client.hpp
http_client/src/: client.cpp
http_server/: CMakeLists.txt  readme.md
http_server/include/: op.hpp  proj.hpp  server.hpp  testproj.hpp  watch.hpp
http_server/src/: haystack_server.cpp  http_haystack_server.cpp  op.cpp  proj.cpp  server.cpp  testproj.cpp
include/: bin.hpp  bool.hpp  col.hpp  coord.hpp  date.hpp  datetime.hpp  datetimerange.hpp  dict.hpp  filter.hpp  grid.hpp  gridreader.hpp  gridval.hpp  gridwriter.hpp  headers.hpp  hisitem.hpp  marker.hpp  num.hpp  ref.hpp  row.hpp  str.hpp  time.hpp  timezone.hpp  uri.hpp  val.hpp  zincreader.hpp  zincwriter.hpp
src/: CMakeLists.txt  bin.cpp  bool.cpp  col.cpp  coord.cpp  date.cpp  datetime.cpp  datetimerange.cpp  dict.cpp  filter.cpp  grid.cpp  gridval.cpp  hisitem.cpp  marker.cpp  num.cpp  ref.cpp  row.cpp  str.cpp  time.cpp  timezone.cpp  uri.cpp  val.cpp  zincreader.cpp  zincwriter.cpp
tests/: CMakeLists.txt  test_dict.cpp  test_filter.cpp  test_grid.cpp  test_value.cpp  test_zinc_reader.cpp
tests/include/ext/catch/: LICENSE_1_0.txt
